...
                self.tableView.refreshControl?.endRefreshing()
            }
        }
    }
    
    private func setupSortButton() {
        let sortButton = UIBarButtonItem(title: "A-Z", style: .plain, target: self, action: #selector(sort(_:)))
        navigationItem.rightBarButtonItem = sortButton
    }
    
    @objc private func sort(_ sender: Any) {
        guard let sortButton = sender as? UIBarButtonItem else { return }
        sortButton.title = self.viewModel.sortItems() ? "A-Z" : "Z-A"
        self.tableView.reloadData()
    }
        
    @objc private func refresh(_ sender: Any) {
        self.viewModel.fetchItems()
    }
...
