...
import Realm
public class SpotModel: Object, Codable{
    @objc dynamic public var _id: String?         //"5983a696951cf747207bed42",
    @objc dynamic public var slug: String?         // "places-to-read",
    @objc dynamic public var eid: String?         // "91716028-4fbd-45d4-905f-92df23cacdef",
    @objc dynamic public var photo: String?         //
    @objc dynamic public var title: String?         // "Places to Read",
    @objc dynamic public var description1: String?         // "<p>When you want to get away and read a good @objc@objc dynamic eGuide</p>",
    @objc dynamic public var category_eid: String?         // "83a5bc0d-bae7-4b3f-b8d9-01c969785783",
    dynamic public var __v: Int?         // 0,
    dynamic public var _active: Bool?         // true,
    @objc dynamic public var updated_at: String?         // "2017-08-03T22:41:26.558Z",
    @objc dynamic public var created_at: String?         // "2017-08-03T22:41:26.546Z",
...
